# grassroots-economics-eth-address-index

./: .gitignore  .gitlab-ci.yml  Dockerfile
python/: .coverage  .coveragerc  CHANGELOG  MANIFEST.in  requirements.txt  run_tests.sh  setup.cfg  setup.py  test_requirements.txt
python/eth_address_declarator/: __init__.py  declarator.py  interface.py
python/eth_address_declarator/accounts_index/: __init__.py  accounts_index.py
python/eth_address_declarator/accounts_index/runnable/: deploy.py
python/eth_address_declarator/data/: AddressDeclarator.json
python/eth_address_declarator/runnable/: add.py  deploy.py  publish.py  view.py
python/eth_address_declarator/token_index/: index.py  interface.py
python/eth_address_declarator/token_index/runnable/: deploy.py
python/eth_address_declarator/unittest/: __init__.py  addressdeclarator.py
python/eth_token_endorser/: __init__.py  token.py
python/eth_token_endorser/data/: TokenEndorser.json
python/eth_token_endorser/runnable/: add.py  deploy.py
python/eth_token_index/: __init__.py  index.py
python/eth_token_index/data/: GiftableToken.json  TokenUniqueSymbolIndex.json
python/eth_token_index/runnable/: add.py  deploy.py  list.py
python/tests/: test_accounts_index.py  test_addressdeclarator.py  test_addressdeclarator_base.py  test_deploy.py  test_inteface.py  test_tokenendorse.py  test_tokenindex.py
solidity/: AccountsIndexAddressDeclarator.sol  AddressDeclarator.json  AddressDeclarator.sol  Makefile  TokenEndorser.json  TokenEndorser.sol  TokenUniqueSymbolIndex.json  TokenUniqueSymbolIndex.sol  TokenUniqueSymbolIndexAddressDeclarator.sol  test.py  test_addressdeclarator.py  test_tokenindex.py  tokenendorser_test.py
