[metadata]
name = eth-token-endorser
version = 0.0.2
description = Ethereum token address to multihash metadata mapper
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/nolash/simple-multisig
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	eth_token_endorser
	eth_token_endorser.runnable
install_requires =
	web3==5.12.2
tests_require =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.extras_require]
testing =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.package_data]
* = 
	data/TokenEndorser.json
	data/TokenEndorser.bin

[options.entry_points]
console_scripts =
	eth-token-endorser-deploy = eth_token_endorser.runnable.deploy:main
	eth-token-endorser-add = eth_token_endorser.runnable.add:main
