[metadata]
name = eth-address-index
version = 0.1.0a10
description = Signed metadata declarations for ethereum addresses
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/nolash/eth-address-declarator
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	eth_address_declarator
	eth_address_declarator.runnable
	eth_token_index
	eth_token_index.runnable
install_requires =
	web3==5.12.2
	crypto-dev-signer~=0.4.13rc2
	chainlib~=0.0.1a15
tests_require =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.extras_require]
testing =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.package_data]
* = 
	data/AddressDeclarator.json
	data/AddressDeclarator.bin
	data/GiftableToken.bin
	data/GifttableToken.json
	data/TokenUniqueSymbolIndex.bin
	data/TokenUniqueSymbolIndex.json
	data/ERC20.json

[options.entry_points]
console_scripts =
	eth-address-declarator-deploy = eth_address_declarator.runnable.deploy:main
	eth-address-declarator-add = eth_address_declarator.runnable.add:main
	eth-token-index-deploy = eth_token_index.runnable.deploy:main
	eth-token-index-add = eth_token_index.runnable.add:main
