[metadata]
name = eth-address-index
version = 0.2.4a2
description = Signed metadata declarations for ethereum addresses
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/cicnet/eth-address-index
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	eth_address_declarator
	eth_address_declarator.runnable
	eth_address_declarator.unittest

[options.package_data]
* = 
	data/AddressDeclarator.json
	data/AddressDeclarator.bin
	data/ERC20.json

[options.entry_points]
console_scripts =
	eth-address-declarator-deploy = eth_address_declarator.runnable.deploy:main
	eth-address-declarator-add = eth_address_declarator.runnable.add:main
